--- a/pages/change-password.html
+++ b/pages/change-password.html
@@ -213,6 +213,7 @@
                             <ul
                               class="dropdown-menu dropdown-menu-light"
                               aria-labelledby="navbarDarkDropdownMenuLink"
+                              style="font-size: 14px; font-weight: 400"
                             >
                               <li>
                                 <div class="dropdown-item d-flex gap-2">
