--- a/index.html
+++ b/index.html
@@ -216,7 +216,10 @@
                               style="font-size: 14px; font-weight: 400"
                             >
                               <li>
-                                <div class="dropdown-item d-flex gap-2">
+                                <div
+                                  class="dropdown-item d-flex gap-2"
+                                  onclick="location.href='./pages/user-information.html'"
+                                >
                                   <span
                                     ><i class="fa-regular fa-address-card"></i
                                   ></span>
